Removed state for bidding among other changes

--- a/UCBC 2024/Simulations/Bidding1S.ipynb
+++ b/UCBC 2024/Simulations/Bidding1S.ipynb
@@ -23,7 +23,7 @@
       "WARNING:tensorflow:From c:\\Python311\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "non-resource variables are not supported in the long term\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding-10724000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding-1335000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo-6131000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-154000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-59000\n",
@@ -71,10 +71,13 @@
      "data": {
       "text/plain": [
        "[{'call': 'PASS',\n",
-       "  'insta_score': 0.958,\n",
-       "  'expected_score': -123,\n",
-       "  'adjustment': 48},\n",
-       " {'call': '2C', 'insta_score': 0.038, 'expected_score': -138, 'adjustment': 2}]"
+       "  'insta_score': 0.558,\n",
+       "  'expected_score': -102,\n",
+       "  'adjustment': 28},\n",
+       " {'call': '2C',\n",
+       "  'insta_score': 0.433,\n",
+       "  'expected_score': -128,\n",
+       "  'adjustment': 22}]"
       ]
      },
      "execution_count": 2,
@@ -104,8 +107,8 @@
     {
      "data": {
       "text/plain": [
-       "[{'call': 'X', 'insta_score': 0.943, 'expected_score': 71, 'adjustment': 47},\n",
-       " {'call': 'PASS', 'insta_score': 0.047, 'expected_score': 21, 'adjustment': 2}]"
+       "[{'call': 'X', 'insta_score': 0.798, 'expected_score': 20, 'adjustment': 40},\n",
+       " {'call': 'PASS', 'insta_score': 0.201, 'expected_score': 8, 'adjustment': 10}]"
       ]
      },
      "execution_count": 3,
@@ -131,36 +134,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KQJxx.Q.Axx.K9xx A.8xx.Jxx.AQxxxx 8x.J9xx.KQ8x.JT8 T9xxx.AKTxx.T9x. 0.99947 \n",
-      " 1S-P-1N-P-2C-X-P-P-P (6.2)  \n",
-      " 1S-P-1N-P-2C-P-2S-P-P-P (6.6) \n",
-      "Qxxxx.ATx.A.KJT8 A.8xx.Jxx.AQxxxx K8.KJ9x.QT98.9xx JT9xx.Qxx.Kxxxx. 0.99937 \n",
+      "Qxxxx.ATx.A.KJT8 A.8xx.Jxx.AQxxxx K8.KJ9x.QT98.9xx JT9xx.Qxx.Kxxxx. 0.99862 \n",
       " 1S-P-1N-P-2C-X-2S-P-P-P (7.6)  \n",
       " 1S-P-1N-P-2C-P-2S-P-P-P (7.6) \n",
-      "KJ8xx.QTx.A.KJxx A.8xx.Jxx.AQxxxx Tx.Axx.KT98x.T98 Q9xxx.KJ9x.Qxxx. 0.99919 \n",
-      " 1S-P-1N-P-2C-X-P-2H-P-P-P (6.7)  \n",
+      "KJ8xx.QTx.A.KJxx A.8xx.Jxx.AQxxxx Tx.Axx.KT98x.T98 Q9xxx.KJ9x.Qxxx. 0.99835 \n",
+      " 1S-P-1N-P-2C-X-2S-P-P-P (6.9)  \n",
       " 1S-P-1N-P-2C-P-2S-P-P-P (6.9) \n",
-      "KJxxx.A.KTx.KJ9x A.8xx.Jxx.AQxxxx xx.QJTxx.A9xx.8x QT98x.K9xx.Q8x.T 0.99895 \n",
-      " 1S-P-1N-P-2C-X-P-P-P (6.3)  \n",
-      " 1S-P-1N-P-2C-P-2S-P-P-P (7.5) \n",
-      "K9xxx.x.KQx.KJ8x A.8xx.Jxx.AQxxxx 8x.QTxxx.AT8x.T9 QJTxx.AKJ9.9xx.x 0.99874 \n",
-      " 1S-P-1N-P-2C-X-P-2H-P-P-P (8.1)  \n",
-      " 1S-P-1N-P-2C-P-P-X-P-3C-P-3H-P-P-P (8.1) \n",
-      "QJ9xx.A.ATx.KJT8 A.8xx.Jxx.AQxxxx Kx.KQJxx.9xxx.xx T8xxx.T9xx.KQ8.9 0.99873 \n",
-      " 1S-P-1N-P-2C-X-P-P-P (6.2)  \n",
+      "K98xx.Jx.AQ.KJ8x A.8xx.Jxx.AQxxxx x.KQT9x.KT9xx.T9 QJTxxx.Axx.8xx.x 0.99792 \n",
+      " 1S-P-1N-P-2C-X-P-P-P (6.4)  \n",
+      " 1S-P-1N-P-2C-P-P-P (6.4) \n",
+      "KJxxx.AKT.x.KT9x A.8xx.Jxx.AQxxxx Qx.9xx.AK98x.J8x T98xx.QJxx.QTxx. 0.99790 \n",
+      " 1S-P-1N-P-2C-X-2D-P-P-P (6.6)  \n",
       " 1S-P-1N-P-2C-P-2S-P-P-P (7.7) \n",
-      "QT9xx.Axx.K.KJxx A.8xx.Jxx.AQxxxx Kx.QT9x.QT8xx.T9 J8xxx.KJx.A9xx.8 0.99854 \n",
-      " 1S-P-1N-P-2C-X-2S-P-P-P (6.3)  \n",
-      " 1S-P-1N-P-2C-P-2S-P-P-P (6.3) \n",
-      "KQTxx.xx.Ax.KJT8 A.8xx.Jxx.AQxxxx x.AKT9xx.Q8xx.xx J98xxx.QJ.KT9x.9 0.99842 \n",
-      " 1S-P-1N-P-2C-X-2H-P-P-P (8.0)  \n",
-      " 1S-P-1N-P-2C-P-2H-P-P-P (8.0) \n",
-      "KQJ8x.x.AKQ.JT8x A.8xx.Jxx.AQxxxx xx.KQJ9x.Txxx.Kx T9xxx.ATxx.98x.9 0.99841 \n",
-      " 1S-P-1N-P-2C-X-P-P-P (6.7)  \n",
-      " 1S-P-1N-P-2C-P-2S-P-P-P (7.9) \n",
-      "KQJTx.T9.Kx.KJ9x A.8xx.Jxx.AQxxxx x.Jxxxx.AQT9x.T8 98xxxx.AKQ.8xx.x 0.99813 \n",
-      " 1S-P-1N-P-2C-X-P-P-P (5.0)  \n",
-      " 1S-P-1N-P-2C-P-P-P (5.0) \n"
+      "KT8xx.A9.A8.J8xx A.8xx.Jxx.AQxxxx xx.KJxx.QT9xx.KT QJ9xx.QTxx.Kxx.9 0.99779 \n",
+      " 1S-P-1N-P-2C-X-2S-P-P-P (7.1)  \n",
+      " 1S-P-1N-P-2C-P-2S-P-P-P (7.1) \n",
+      "K8xxx.Ax.A.J98xx A.8xx.Jxx.AQxxxx Qx.QT9xx.KT98x.T JT9xx.KJx.Qxxx.K 0.99778 \n",
+      " 1S-P-1N-P-2C-X-2S-P-P-P (7.1)  \n",
+      " 1S-P-1N-P-2C-P-2S-P-P-P (7.1) \n",
+      "Q8xxx.AK.xx.KT9x A.8xx.Jxx.AQxxxx K.QT9xx.QT98x.J8 JT9xxx.Jxx.AKx.x 0.99772 \n",
+      " 1S-P-1N-P-2C-X-P-P-P (4.9)  \n",
+      " 1S-P-1N-P-2C-P-P-P (4.9) \n",
+      "KJTxx.K9.KT.KJT8 A.8xx.Jxx.AQxxxx Qx.AQTxx.xxx.9xx 98xxx.Jxx.AQ98x. 0.99762 \n",
+      " 1S-P-1N-P-2C-X-2S-P-P-P (6.9)  \n",
+      " 1S-P-1N-P-2C-P-2S-P-P-P (6.9) \n",
+      "KT8xx.x.AQx.KT98 A.8xx.Jxx.AQxxxx 9x.KQTxx.KT9xx.x QJxxx.AJ9x.8x.Jx 0.99762 \n",
+      " 1S-P-1N-P-2C-X-2S-P-P-P (6.8)  \n",
+      " 1S-P-1N-P-2C-P-2S-P-P-P (6.8) \n",
+      "KT9xx.AQx.A.T98x A.8xx.Jxx.AQxxxx xx.KJxx.QT98x.KJ QJ8xx.T9x.Kxxx.x 0.99750 \n",
+      " 1S-P-1N-P-2C-X-2S-P-P-P (7.9)  \n",
+      " 1S-P-1N-P-2C-P-2S-P-P-P (7.9) \n"
      ]
     }
    ],
@@ -189,16 +192,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T8xxx.KJx.KT9x.9 KQ.ATx.AQ8xx.Jxx A.8xx.Jxx.AQxxxx J9xxx.Q9xx.x.KT8 1.00\n",
-      "9xx.xxxx.Qx.KT8x Jxx.AKT9.AK8x.J9 A.8xx.Jxx.AQxxxx KQT8xx.QJ.T9xx.x 1.00\n",
-      "T9xx.QJ9.K9x.Txx KJ8.Kxxx.AQxx.K9 A.8xx.Jxx.AQxxxx Qxxxx.ATx.T8x.J8 1.00\n",
-      "Qxx.T9xx.KTx.J9x KT8x.AKx.AQxx.T8 A.8xx.Jxx.AQxxxx J9xxx.QJx.98x.Kx 1.00\n",
+      "Qxxx.x.QTxxx.98x KTxx.KQxx.AK.JTx A.8xx.Jxx.AQxxxx J98x.AJT9x.98x.K 1.00\n",
+      "JTxx.QTx.Kxx.8xx Q9xx.A9x.AQT8.K9 A.8xx.Jxx.AQxxxx K8xx.KJxx.9xx.JT 1.00\n",
+      "J98xx.A9xx.x.8xx KQx.KQT.KQT9x.JT A.8xx.Jxx.AQxxxx Txxx.Jxx.A8xx.K9 1.00\n",
+      "KTx.Txx.K9xx.9xx QJ8x.KJx.AQx.KJT A.8xx.Jxx.AQxxxx 9xxxx.AQ9x.T8x.8 1.00\n",
+      "Q9xx.Q9x.9xxx.Jx Jx.AJx.AKT8x.KT8 A.8xx.Jxx.AQxxxx KT8xxx.KTxx.Q.9x 1.00\n",
+      "Txxx.K9x.QTxx.Jx Q9x.QJxx.AK8.K98 A.8xx.Jxx.AQxxxx KJ8xx.ATx.9xx.Tx 1.00\n",
+      "xxxx.Kxxx.8.J98x KJ9.AQx.AT9xx.KT A.8xx.Jxx.AQxxxx QT8xx.JT9.KQxx.x 0.99\n",
       "T9xx.KJ.T9xx.T8x Qxx.AT9x.AK8x.Kx A.8xx.Jxx.AQxxxx KJ8xx.Qxxx.Qx.J9 1.00\n",
-      "KT9xxx.Axxxx.xx. Qxx.KQ.A98xx.KJ8 A.8xx.Jxx.AQxxxx J8x.JT9.KQT.T9xx 0.98\n",
-      "Qxxx.Axx.K9xx.J9 KJT9x.QT.AQT.K8x A.8xx.Jxx.AQxxxx 8xx.KJ9xx.8xx.Tx 0.35\n",
-      "Kxxx.AJxx.Q9x.T8 JT8x.KQTx.AKx.KJ A.8xx.Jxx.AQxxxx Q9xx.9x.T8xx.9xx 1.00\n",
-      "JTx.Txxx.Qxx.T9x Q9x.K9.AK9x.KJ8x A.8xx.Jxx.AQxxxx K8xxxx.AQJx.T8x. 1.00\n",
-      "xxxx.Q9xx.9xx.Kx QJxx.AKx.AQxx.Tx A.8xx.Jxx.AQxxxx KT98.JTx.KT8.J98 1.00\n"
+      "8xx.Txxxx.98x.Tx KQ9xx.AQJ.Txx.KJ A.8xx.Jxx.AQxxxx JTxx.K9.AKQx.98x 0.43\n",
+      "Tx.AKQJ9.xxx.J9x KQJx.xxx.AK.KT8x A.8xx.Jxx.AQxxxx 98xxxx.Tx.QT98x. 0.41\n"
      ]
     }
    ],
