--- a/UCBC 2024/Simulations/OpeningLead4S.ipynb
+++ b/UCBC 2024/Simulations/OpeningLead4S.ipynb
@@ -52,8 +52,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding-10724000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo-6131000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding-1335000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo-1335000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-154000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-59000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lr3-1000000\n",
@@ -67,7 +67,7 @@
    ],
    "source": [
     "models = Models.from_conf(conf.load('../Conf/UCBC2024.conf'),'..')   # loading neural networks\n",
-    "sampler = Sample.from_conf(conf.load('../Conf/UCBC2024.conf'), False)  # Load sampling strategies"
+    "sampler = Sample.from_conf(conf.load('../Conf/UCBC2024.conf'), True)  # Load sampling strategies"
    ]
   },
   {
@@ -77,6 +77,40 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finding leads from neural network\n",
+      "Cx 0.413\n",
+      "HA 0.250\n",
+      "Dx 0.179\n",
+      "ST 0.138\n",
+      "Now generating 5000000 deals to find opening lead\n",
+      "sample_cards_auction, nsteps= 4\n",
+      "NS:  1.0 EW:  99.0 Auction:  ['PAD_START', 'PAD_START', 'PASS', '1S', 'PASS', '2H', 'PASS', '2N', 'PASS', '4S', 'PASS', 'PASS', 'PASS']\n",
+      "nesw_i 0\n",
+      "Player:  N Hand:  T.AKxx.QTxx.J9xx\n",
+      "HCP:  [[11.06  6.6  12.5 ]]\n",
+      "Shape:  [[4.03 5.06 1.97 1.87 2.56 2.63 3.99 3.83 4.83 1.68 3.22 3.26]]\n",
+      "Setting seed (Sampling)= 3948620766\n",
+      "sample_cards_vec generating 5000000\n",
+      "sample_cards_vec took 99.1\n",
+      "n_samples 1511211 matching bidding info\n",
+      "Samples after bidding filtering:  1  Threshold:  0.25\n",
+      "Generated samples: 10  OK Quality False\n",
+      "Now simulate on 500 deals to find opening lead\n",
+      "Opening lead being examined:  C6 10\n",
+      "dds took 0.048\n",
+      "Opening lead being examined:  HA 10\n",
+      "dds took 0.014\n",
+      "Opening lead being examined:  D6 10\n",
+      "dds took 0.06603\n",
+      "Opening lead being examined:  ST 10\n",
+      "dds took 0.01697\n",
+      "Accepted samples for opening lead: 10\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -85,15 +119,16 @@
     }
    ],
    "source": [
-    "# both vulnerable. you are sitting South\n",
-    "hand = '5.A97643.Q82.QJ5'\n",
+    "# Camrose 2024 Deal 70\n",
+    "# You are sitting North and you hold\n",
+    "hand = 'T.AK63.QT76.J962'\n",
     "\n",
     "# the auction goes:\n",
-    "auction = [\"PAD_START\", \"PAD_START\", \"PAD_START\", \"1C\", \"PASS\", \"2S\", \"PASS\", \"3S\", \"PASS\", \"4D\",  \"PASS\", \"4S\", \"PASS\", \"4N\", \"PASS\", \"5D\", \"PASS\", \"6S\", \"PASS\", \"PASS\", \"PASS\"]\n",
+    "auction = [\"PAD_START\", \"PAD_START\", \"PASS\", \"1S\", \"PASS\", \"2H\", \"PASS\", \"2N\", \"PASS\", \"4S\", \"PASS\", \"PASS\", \"PASS\"]\n",
     "\n",
     "# what to lead?\n",
     "\n",
-    "lead_bot = BotLead([True, True], hand, models, sampler, 2, False)\n",
+    "lead_bot = BotLead([True, False], hand, models, sampler, 0, True)\n",
     "lead = lead_bot.find_opening_lead(auction)"
    ]
   },
@@ -138,17 +173,21 @@
      "data": {
       "text/plain": [
        "[{'card': 'HA',\n",
-       "  'insta_score': 0.275,\n",
-       "  'expected_tricks_sd': 11.61,\n",
-       "  'p_make_contract': 0.25},\n",
-       " {'card': 'CQ',\n",
-       "  'insta_score': 0.509,\n",
-       "  'expected_tricks_sd': 12.21,\n",
-       "  'p_make_contract': 0.18},\n",
+       "  'insta_score': 0.25,\n",
+       "  'expected_tricks_sd': 10.6,\n",
+       "  'p_make_contract': 0.0},\n",
+       " {'card': 'Cx',\n",
+       "  'insta_score': 0.413,\n",
+       "  'expected_tricks_sd': 10.7,\n",
+       "  'p_make_contract': 0.0},\n",
        " {'card': 'Dx',\n",
-       "  'insta_score': 0.159,\n",
-       "  'expected_tricks_sd': 12.39,\n",
-       "  'p_make_contract': 0.18}]"
+       "  'insta_score': 0.179,\n",
+       "  'expected_tricks_sd': 10.7,\n",
+       "  'p_make_contract': 0.0},\n",
+       " {'card': 'ST',\n",
+       "  'insta_score': 0.138,\n",
+       "  'expected_tricks_sd': 10.7,\n",
+       "  'p_make_contract': 0.0}]"
       ]
      },
      "execution_count": 5,
@@ -182,16 +221,16 @@
     {
      "data": {
       "text/plain": [
-       "['T9xx.T.KT9.AK8xx x.KJ8xx.Jxxxx.T9 AKQJ8xx.Q.Ax.xxx 0.41547',\n",
-       " 'Txxx.Kx.xx.AKxxx J.JTx.KJTxxx.8xx AKQ98xx.Q8.A9.T9 0.39986',\n",
-       " '98x.KTx.Jx.AK9xx Tx.J8.K9xxxx.T8x AKQJxxx.Qx.AT.xx 0.39001',\n",
-       " 'T8x.8.Kxxx.AKxxx Jx.QJTx.JT9x.8xx AKQ9xxx.Kx.Ax.T9 0.38990',\n",
-       " 'T9xx.Kx.9x.AKxxx x.QJTx.JTxxx.T98 AKQJ8xx.8.AKx.xx 0.38154',\n",
-       " 'J8x.Tx.K9.AK9xxx xxx.QJ8x.xxxx.8x AKQT9x.K.AJTx.Tx 0.37995',\n",
-       " 'Jxx.K8.Tx.AKT98x T9x.Tx.KJ9xxx.xx AKQ8xx.QJx.Ax.xx 0.37301',\n",
-       " 'J9xx.x.K9x.AKxxx 8x.QT8x.Jxxx.98x AKQTxx.KJ.ATx.Tx 0.36399',\n",
-       " 'AJxx.Kx.xx.KT9xx x.JT8x.T9xxx.A8x KQT98xx.Q.AKJ.xx 0.33872',\n",
-       " 'JT8.Kx.Tx.AK9xxx xxxx.QJ8.J9xxx.x AKQ9x.Tx.AKx.T8x 0.33787']"
+       "['A98xx.QT9xx..A8x Jx.J8.J8xxxx.Qxx KQxxx.xx.AK9.KTx 0.25192',\n",
+       " 'AKxxx.QJ9xx..8xx J8.xx.A98xxx.Txx Q9xxx.T8.KJx.AKQ 0.24591',\n",
+       " 'A98xx.JT98x..AQx Kx.xx.J98xxx.Txx QJxxx.Qx.AKx.K8x 0.24540',\n",
+       " 'KJ8xx.QJ8xx..ATx 9x.9x.J9xxxx.Kxx AQxxx.Tx.AK8.Q8x 0.24063',\n",
+       " 'AQ9xxx.Q8xxx..Kx K.Tx.J9xxxx.Txxx J8xxx.J9.AK8.AQ8 0.24041',\n",
+       " 'AJ9xx.QJ8xx..Kxx Kx.T9.J98xxx.Txx Q8xxx.xx.AKx.AQ8 0.23983',\n",
+       " 'KQJ8xx.T8xxx..Ax x.J9.KJ98xx.Txxx A9xxx.Qx.Axx.KQ8 0.23709',\n",
+       " 'A9xxx.QJ98x..A8x K8.Tx.J8xxxx.Txx QJxxx.xx.AK9.KQx 0.23449',\n",
+       " 'KJ98xx.QJ98x..Kx x.Tx.AJ98xx.T8xx AQxxx.xx.Kxx.AQx 0.23405',\n",
+       " 'KJ8xxx.QJT9x..A8 x.xx.A98xxx.xxxx AQ9xx.8x.KJx.KQT 0.23311']"
       ]
      },
      "execution_count": 6,
