--- a/UCBC 2024/Simulations/OpeningLead6H.ipynb
+++ b/UCBC 2024/Simulations/OpeningLead6H.ipynb
@@ -93,7 +93,7 @@
     "\n",
     "# what to lead?\n",
     "\n",
-    "lead_bot = BotLead([True, True], hand, models, sampler, False)\n",
+    "lead_bot = BotLead([True, True], hand, models, sampler, 1, False)\n",
     "lead = lead_bot.find_opening_lead(auction)"
    ]
   },
