--- a/UCBC 2024/Simulations/OpeningLead6N.ipynb
+++ b/UCBC 2024/Simulations/OpeningLead6N.ipynb
@@ -93,7 +93,7 @@
     "\n",
     "# what to lead?\n",
     "\n",
-    "lead_bot = BotLead([False, False], hand, models, sampler, False)\n",
+    "lead_bot = BotLead([False, False], hand, models, sampler, 0, False)\n",
     "lead = lead_bot.find_opening_lead(auction)"
    ]
   },
