--- a/UCBC 2024/Simulations/Overcall3D.ipynb
+++ b/UCBC 2024/Simulations/Overcall3D.ipynb
@@ -23,7 +23,7 @@
       "WARNING:tensorflow:From c:\\Python311\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "non-resource variables are not supported in the long term\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding-10724000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding-1335000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo-6131000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-154000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-59000\n",
@@ -72,7 +72,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'call': '3D', 'insta_score': 0.905, 'expected_score': -38, 'adjustment': 45}, {'call': 'X', 'insta_score': 0.053, 'expected_score': -24, 'adjustment': 3}]\n"
+      "[{'call': 'PASS', 'insta_score': 0.058, 'expected_score': 46, 'adjustment': 3}, {'call': '3D', 'insta_score': 0.8, 'expected_score': -70, 'adjustment': 40}, {'call': 'X', 'insta_score': 0.051, 'expected_score': -38, 'adjustment': 3}, {'call': '4D', 'insta_score': 0.06, 'expected_score': -44, 'adjustment': 3}]\n"
      ]
     }
    ],
@@ -102,16 +102,16 @@
     {
      "data": {
       "text/plain": [
-       "['x.AK9x.AKJTxx.Tx AQTx.Jxxx.x.98xx J9xxx.QT8x..KQxx K8x.x.Q98xxx.AJx 0.95925 \\n P-P-2D-3D-P-4S-P-P-P (7.1)  \\n P-P-2D-X-P-2S-P-3D-P-3H-P-P-P (9.8) ',\n",
-       " 'x.AK9x.AKJTxx.Tx QJxxx.JT.9.Q8xxx AT8xx.Q8xxx..Kxx K9.xx.Q8xxxx.AJ9 0.95912 \\n P-P-2D-3D-P-4S-P-P-P (7.9)  \\n P-P-2D-X-P-4S-P-P-P (7.9) ',\n",
-       " 'x.AK9x.AKJTxx.Tx Qxxx.Qxxx..KJ8xx AJT8x.8xx.x.Qxxx K9x.JT.Q98xxx.A9 0.95401 \\n P-P-2D-3D-P-3S-P-3N-P-P-P (7.6)  \\n P-P-2D-X-P-2S-P-3D-P-4S-P-P-P (6.5) ',\n",
-       " 'x.AK9x.AKJTxx.Tx AQxx.QTxxx.x.9xx JT98x.Jxx..KQJ8x Kxx.8.Q98xxx.Axx 0.94990 \\n P-P-2D-3D-P-4S-P-P-P (7.5)  \\n P-P-2D-X-P-2S-P-3D-P-4S-P-P-P (7.5) ',\n",
-       " 'x.AK9x.AKJTxx.Tx AQJx.JT8x.x.98xx K8xxx.Qxxx..Qxxx T9x.x.Q98xxx.AKJ 0.94889 \\n P-P-2D-3D-P-3S-P-3N-P-P-P (7.2)  \\n P-P-2D-X-P-2S-P-3D-P-3H-P-P-P (8.7) ',\n",
-       " 'x.AK9x.AKJTxx.Tx J98xxx.QTxx..Axx QTxx.J8x.9.KQ8xx AK.xx.Q8xxxx.J9x 0.94756 \\n P-P-2D-3D-P-3S-P-3N-P-P-P (7.1)  \\n P-P-2D-X-P-2S-P-3D-P-4S-P-P-P (5.8) ',\n",
-       " 'x.AK9x.AKJTxx.Tx QT9x.J8xx.x.K9xx KJ8xxx.Qxxx..QJ8 Ax.T.Q98xxx.Axxx 0.94267 \\n P-P-2D-3D-P-4S-P-P-P (8.2)  \\n P-P-2D-X-P-4S-P-P-P (8.2) ',\n",
-       " 'x.AK9x.AKJTxx.Tx KQJTx.J8xx..QJ9x 9xxxx.Qxx.9.Kxxx A8.Tx.Q8xxxx.A8x 0.93927 \\n P-P-2D-3D-P-3S-P-3N-P-P-P (5.7)  \\n P-P-2D-X-P-2S-P-3D-P-4S-P-P-P (5.5) ',\n",
-       " 'x.AK9x.AKJTxx.Tx AQT9xx.T8xx..QJx Jxxx.QJx.x.K98xx K8.xx.Q98xxx.Axx 0.93547 \\n P-P-2D-3D-P-3S-P-3N-P-4C-P-4S-P-P-P (4.7)  \\n P-P-2D-X-P-2S-P-3D-P-4S-P-P-P (4.7) ',\n",
-       " 'x.AK9x.AKJTxx.Tx Kxxx.Q8xx.x.8xxx AT98x.Jxxx..KQxx QJx.T.Q98xxx.AJ9 0.93326 \\n P-P-2D-3D-P-4S-P-P-P (8.2)  \\n P-P-2D-X-P-4S-P-P-P (8.2) ']"
+       "['x.AK9x.AKJTxx.Tx A8xxx.QJ8x..Q98x QJTxx.xxx.x.Axxx K9.Tx.Q98xxx.KJx 0.97584 \\n P-P-2D-3D-P-3S-P-4D-P-4S-P-P-P (6.5)  \\n P-P-2D-4D-P-4S-P-P-P (6.5)  \\n P-P-2D-P-P-P (5.1)  \\n P-P-2D-X-P-2S-P-3D-P-4S-P-P-P (6.5) ',\n",
+       " 'x.AK9x.AKJTxx.Tx AQT8x.Qxxx..9xxx Jxxx.JT8x.8.AQ8x K9x.x.Q9xxxx.KJx 0.96829 \\n P-P-2D-3D-P-3S-P-4D-P-4S-P-P-P (4.5)  \\n P-P-2D-4D-P-4H-P-P-P (9.0)  \\n P-P-2D-P-P-P (4.9)  \\n P-P-2D-X-P-2H-P-3H-P-4H-P-P-P (9.0) ',\n",
+       " 'x.AK9x.AKJTxx.Tx KQ9x.xx.x.Q8xxxx AT8xxx.QJT8x..Jx Jx.xx.Q98xxx.AK9 0.96529 \\n P-P-2D-3D-P-3S-P-4D-P-4S-P-P-P (8.7)  \\n P-P-2D-4D-P-4S-P-P-P (8.7)  \\n P-P-2D-P-P-2S-P-3D-P-3S-P-4D-P-4S-P-P-P (8.7)  \\n P-P-2D-X-P-4S-P-P-P (8.7) ',\n",
+       " 'x.AK9x.AKJTxx.Tx Txxx.Q8xx..AK8xx KJ9xx.Jxxx.x.Q9x AQ8.T.Q98xxx.Jxx 0.96332 \\n P-P-2D-3D-P-3S-P-4D-P-4S-P-P-P (5.7)  \\n P-P-2D-4D-P-4S-P-P-P (5.7)  \\n P-P-2D-P-P-P (5.9)  \\n P-P-2D-X-P-2S-P-3D-P-3S-P-4D-P-4S-P-P-P (5.7) ',\n",
+       " 'x.AK9x.AKJTxx.Tx AQxx.QTxxx.x.9xx JT98x.Jxx..KQJ8x Kxx.8.Q98xxx.Axx 0.95980 \\n P-P-2D-3D-P-3S-P-4D-P-4S-P-P-P (7.5)  \\n P-P-2D-4D-P-4S-P-P-P (7.5)  \\n P-P-2D-P-P-P (5.4)  \\n P-P-2D-X-P-2S-P-3D-P-3S-P-4D-P-4S-P-P-P (7.5) ',\n",
+       " 'x.AK9x.AKJTxx.Tx J98xx.Txxx..KQ8x KTxx.Q8xx.x.Axxx AQx.J.Q98xxx.J9x 0.95915 \\n P-P-2D-3D-P-3H-P-4H-P-P-P (9.0)  \\n P-P-2D-4D-P-4H-P-P-P (9.0)  \\n P-P-2D-P-P-X-P-3D-P-3H-P-3S-P-P-P (5.8)  \\n P-P-2D-X-P-3D-P-P-P (8.1) ',\n",
+       " 'x.AK9x.AKJTxx.Tx QJ8x.QTxx.x.QJ8x 9xxxx.J8xx..AKxx AKT.x.Q98xxx.9xx 0.95785 \\n P-P-2D-3D-P-3S-P-4D-P-4S-P-P-P (7.5)  \\n P-P-2D-4D-P-4S-P-P-P (7.5)  \\n P-P-2D-P-P-P (4.7)  \\n P-P-2D-X-P-4S-P-P-P (7.5) ',\n",
+       " 'x.AK9x.AKJTxx.Tx AT98x.Jxx.x.KJxx Jxxx.T8xxx..AQ8x KQx.Q.Q98xxx.9xx 0.95607 \\n P-P-2D-3D-P-3H-P-4H-P-P-P (11.1)  \\n P-P-2D-4D-P-4H-P-P-P (11.1)  \\n P-P-2D-P-P-P (4.5)  \\n P-P-2D-X-P-2H-P-3H-P-4H-P-P-P (11.1) ',\n",
+       " 'x.AK9x.AKJTxx.Tx KQJTx.JTxxx..J8x A8xxx.8x.9.KQ9xx 9x.Qx.Q8xxxx.Axx 0.95590 \\n P-P-2D-3D-P-3S-P-4D-P-4S-P-P-P (7.1)  \\n P-P-2D-4D-P-4S-P-P-P (7.1)  \\n P-P-2D-P-P-2S-P-3D-P-3S-P-4D-P-4S-P-P-P (7.1)  \\n P-P-2D-X-P-4S-P-P-P (7.1) ',\n",
+       " 'x.AK9x.AKJTxx.Tx JTxx.8xx..AK9xxx KQxxx.QJTx.9.J8x A98.xx.Q8xxxx.Qx 0.95177 \\n P-P-2D-3D-P-3S-P-4D-P-4S-P-P-P (6.7)  \\n P-P-2D-4D-P-4S-P-P-P (6.7)  \\n P-P-2D-P-P-X-P-3D-P-3S-P-3N-P-4C-P-4H-P-4S-P-4N-P-5C-P-6D-P-P-P (7.9)  \\n P-P-2D-X-P-3D-P-P-P (7.9) ']"
       ]
      },
      "execution_count": 3,
@@ -143,16 +143,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x.AK9x.AKJTxx.Tx 98xxx.Q8xx.8xx.8 AKx.x.xx.AQJxxxx QJTx.JTxx.Q9.K9x\n",
+      "x.AK9x.AKJTxx.Tx QT9.JTxx.xx.Q98x AKJ.8.9xx.AKJxxx 8xxxxx.Qxxx.Q8.x\n",
+      "x.AK9x.AKJTxx.Tx J8xx.JT8xx.9x.Kx AKx.Q.Qxx.AJ8xxx QT9xx.xxx.8x.Q9x\n",
+      "x.AK9x.AKJTxx.Tx QJT8xx.Jxx.8x.xx Axx.Q.xx.AKQJ98x K9x.T8xxx.Q9x.xx\n",
+      "x.AK9x.AKJTxx.Tx T98xx.Qxx.8x.98x Axx.x.Qxxx.AKQJx KQJx.JT8xx.9.xxx\n",
+      "x.AK9x.AKJTxx.Tx Jxxxxx.QJxx.x.8x AQ8.x.8xxx.AKQJx KT9.T8xx.Q9.9xxx\n",
       "x.AK9x.AKJTxx.Tx Q9xxx.QTxx.8x.9x AJx..9xxx.AKQ8xx KT8x.J8xxx.Q.Jxx\n",
-      "x.AK9x.AKJTxx.Tx 98xxx.8xx.xx.8xx KTx.T.Q9xx.AKQ9x AQJx.QJxxx.8.Jxx\n",
-      "x.AK9x.AKJTxx.Tx AT9xx.QT.xx.Q98x KQ8.x.Q8xx.AKxxx Jxxx.J8xxxx.9.Jx\n",
-      "x.AK9x.AKJTxx.Tx KQ8xx.xxx.8x.Qxx AJT.x.Q9x.AK8xxx 9xxx.QJT8x.xx.J9\n",
-      "x.AK9x.AKJTxx.Tx KJ9x.Jxxxx.Qx.xx A8x.Q.9x.AKJ8xxx QTxxx.T8x.8xx.Q9\n",
-      "x.AK9x.AKJTxx.Tx Qxx.Qxx.Q8xxx.Jx AKx.JTxx.x.AK9xx JT98xx.8x.9.Q8xx\n",
-      "x.AK9x.AKJTxx.Tx KQ8xx.xx.9xxx.8x AJx.JT8x.Q.AQJxx T9xx.Qxx.8x.K9xx\n",
-      "x.AK9x.AKJTxx.Tx 98xxx.Qxxx.9.Kxx AKJ.x.xxxx.AQ9xx QTxx.JT8x.Q8.J8x\n",
-      "x.AK9x.AKJTxx.Tx KQTxx.Txx.Qxx.xx AJ9.QJxx.x.AKJxx 8xxx.8x.98x.Q98x\n"
+      "x.AK9x.AKJTxx.Tx J9xx.J8xx.Q8x.Qx AK8.Q.9xxx.AKJxx QTxxx.Txxx..98xx\n",
+      "x.AK9x.AKJTxx.Tx JTxxx.J8x.xx.xxx AKx.xx.Q9xx.AQJ9 Q98x.QTxx.8.K8xx\n",
+      "x.AK9x.AKJTxx.Tx JTxx.Q8xx.xx.xxx AQx.x.98x.AKQ8xx K98xx.JTxx.Qx.J9\n",
+      "x.AK9x.AKJTxx.Tx QT8xx.J8x.9.QJxx AKx.Tx.Qxxx.AKxx J9xx.Qxxx.8x.98x\n"
      ]
     }
    ],
